--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
@@ -259,6 +262,7 @@
             </div>
         </div>
     </section>
+    <!--
     <section class="enhance_vision">
         <div class="container">
             <h2>
@@ -342,8 +346,8 @@
                 </p>
             </div>
         </div>
-
     </section>
+    -->
     <section class="reviews">
         <div class="container">
             <div class="reviews_readers">
@@ -454,6 +458,8 @@
                         I had a question about the book and the author response was great & comfort.
                     </p>
                 </article>
+            </div>
+            <div class="one_review">
                 <article>
                     <div>
                         <img src="images/img_15.png" alt="people">
@@ -491,6 +497,7 @@
                     </p>
                 </article>
             </div>
+
         </div>
     </section>
     <section class="articles_resources">
@@ -504,7 +511,7 @@
                     <h5>
                         Significant reading has more info number
                     </h5>
-                    <p>
+                    <p class="articles_p">
                         Override the digital divide with additional clickthroughs from DevOps for real-time schemas.
                     </p>
                     <div class="date">
@@ -522,7 +529,7 @@
                     <h5>
                         Many variations of pass majority have suffered
                     </h5>
-                    <p>
+                    <p class="articles_p">
                         Capitalize on low-hanging fruit to identify a ballpark value-added activity to beta test.
                     </p>
                     <div class="date">
@@ -541,7 +548,7 @@
                     <h5>
                         Words which don’t look even slightly believable
                     </h5>
-                    <p>
+                    <p class="articles_p">
                         Podcasting operational change management inside of workflows to establish a framework.
                     </p>
                     <div class="date">
@@ -566,8 +573,8 @@
                 <br> edition at your fingertip with in a minute.
             </p>
             <form class="email">
-                <input type="email" placeholder="Your Email ID..." >
-                <button type="submit"> Subscribe </button>
+                <input type="email" placeholder="Your Email ID...">
+                <button type="submit"> Subscribe</button>
             </form>
         </div>
     </section>
@@ -578,7 +585,7 @@
     <div class="container">
         <div class="footer_all">
             <div class="logo_soc_network">
-                <img src="images/logo.svg" alt="logo">
+                <img src="images/logo.svg" alt="logo" class="logo_footer">
                 <ul class="soc_network">
                     <li><a href="#"> <img src="images/face_white.svg" alt="facebook"> </a></li>
                     <li><a href="#"> <img src="images/twit_white.svg" alt="twitter"> </a></li>
@@ -639,7 +646,7 @@
                 <p> Phone : <span> (+22) 123 - 4567 - 900 </span></p>
             </div>
         </div>
-        <p> © Drafted by <span> VictorFlow </span> - Powered by <span> Webflow.</span> </p>
+        <p> © Drafted by <span> VictorFlow </span> - Powered by <span> Webflow.</span></p>
     </div>
 </footer>
 </body>
