--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </section>
     <section class="author’s_book">
         <div class="container">
-            <h2>
+            <h2 class="author’s_book_title">
                 The Author’s Book
             </h2>
             <div class="art_books">
