--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
           rel="stylesheet">
-    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/owl.carousel.css">
+    <link rel="stylesheet" href="css/owl.theme.default.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
+
+
 </head>
 <body>
 <header>
@@ -506,7 +510,7 @@
             <h2>
                 Articles & Resources
             </h2>
-            <div class="articles">
+            <div class="articles owl-carousel">
                 <article>
                     <img src="images/img_16.jpg" alt="people">
                     <h5>
@@ -650,5 +654,11 @@
         <p> © Drafted by <span> VictorFlow </span> - Powered by <span> Webflow.</span></p>
     </div>
 </footer>
+<script
+        src="https://code.jquery.com/jquery-3.7.1.js"
+        integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
+        crossorigin="anonymous"></script>
+<script src="scripts/owl.carousel.js"></script>
+<script src="scripts/scripts.js"></script>
 </body>
 </html>
