--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     <link rel="stylesheet" href="css/owl.theme.default.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-
-
+    <link rel="stylesheet" href="css/media.css">
 </head>
 <body>
 <header>
@@ -78,7 +77,7 @@
                 </div>
             </div>
             <div class="img">
-                <img src="images/image_1.jpg" alt="img_main">
+                <img src="images/image_1.jpg" alt="img_main" class="img_main">
             </div>
         </div>
     </section>
@@ -219,7 +218,7 @@
                 </p>
                 <a href="#"> Order Today </a>
             </div>
-            <img src="images/img_11.png" alt="book and coffee">
+            <img src="images/img_11.png" alt="book and coffee" class="book_coffee">
         </div>
     </section>
 
@@ -263,7 +262,7 @@
                         </p>
                     </article>
                 </div>
-                <img src="images/img_12.png" alt="women_reading">
+                <img src="images/img_12.png" alt="women_reading" class="women_reading">
             </div>
         </div>
     </section>
